# Premium_insurance_detection

./: .gitignore  Car_Dataset.csv  Home.py  README.md  app.py  car_ml_model.py  frontend.py  ml-model.ipynb  model.pkl  pyproject.toml  requirements.txt
models/: car_insurance_model.pkl  model.pkl
pages/: 1_Health_Predictor.py  2_Analytics.py  2_Health_Analytics.py  3_Car_Predict.py  4_Car_Analytics.py
src/my-app/: main.py
